potential fixed weird overflow things

--- a/_sass/mytheme/_style.scss
+++ b/_sass/mytheme/_style.scss
@@ -1,3 +1,6 @@
+* {
+	overflow:hidden;
+}
 html,body {
 	margin:0;
 	height:100%;
@@ -7,12 +10,15 @@ body {
 	font-family:$base-font-family;
 	background:$background-color;
 	color:$text-color;
+	overflow:hidden;
 }
 .wrapper {
 	display:flex;
 	flex-direction:row;
+	flex-grow:1;
 	height:100%;
 	width:100%;
+	overflow:hidden;
 }
 .logo {
 	background:$brand-color;
@@ -164,6 +170,7 @@ body {
 	flex-grow:1;
 	// background:blue;
 	// width:100%;
+	display:flex;
 	position:relative;
 	.about-link {
 		background:white;
@@ -183,7 +190,12 @@ body {
 			opacity:1;		
 		}
 	}
+	overflow:hidden;
 	iframe {
+		overflow:hidden;
+		min-width:800px;
+		min-height:600px;
+
 		width:100%;
 		height:100%;
 	}
